[package]
authors = [
    "The Cortex-M Team <cortex-m@teams.rust-embedded.org>",
    "Jorge Aparicio <jorge@japaric.io>",
]
categories = ["embedded", "hardware-support", "no-std"]
description = "Low level access to Cortex-M processors"
documentation = "https://docs.rs/cortex-m"
keywords = ["arm", "cortex-m", "register", "peripheral"]
license = "MIT OR Apache-2.0"
name = "pic32"
readme = "README.md"
repository = "https://github.com/rust-embedded/cortex-m"
version = "0.6.2"
edition = "2018"
links = "pic32"  # prevent multiple versions of this crate to be linked together

[dependencies]
r0 = "1.0.0"
bare-metal = "1.0.0"
bitfield = "0.13.2"
embedded-hal = "0.2.4"

[features]
inline-asm = []
linker-plugin-lto = []

[workspace]
members = ["xtask"]

[package.metadata.docs.rs]
targets = [
    "mipsel-unknown-none"
]

[patch.crates-io]
object = { path = "../object" }
